# fno-pre-req

./: .gitignore  IDX_FUT.toml  IDX_OPT.toml  README.md  example.py  master.toml  master_generator.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  static.yml
